[gd_scene load_steps=29 format=3 uid="uid://y02itxdttg12"]

[ext_resource type="Script" uid="uid://b3uv0as3metvw" path="res://Scripts/main.gd" id="1_erwvk"]
[ext_resource type="Texture2D" uid="uid://blipdr4rs81hk" path="res://Assets/Design/Backgrounds/Chain.png" id="2_2w5on"]
[ext_resource type="Script" uid="uid://mwha83ef1gym" path="res://Scripts/Slots/card_manager.gd" id="3_2w5on"]
[ext_resource type="PackedScene" uid="uid://fljxq4fxoosw" path="res://Scenes/Cards/Cards (1 - 11)/Card1.tscn" id="3_346fj"]
[ext_resource type="Script" uid="uid://c0guxsyie3r10" path="res://Scripts/Game/player_hand.gd" id="4_0sclb"]
[ext_resource type="FontFile" uid="uid://b6ygguqq7r5q2" path="res://Assets/Font/Munro.ttf" id="4_fq0cl"]
[ext_resource type="Texture2D" uid="uid://dtwyqlqnxd2ig" path="res://Assets/Design/Icons/Score.png" id="5_hwpts"]
[ext_resource type="PackedScene" uid="uid://bjqipv2lfvg50" path="res://Scenes/Slots/card_slot.tscn" id="5_sxkr1"]
[ext_resource type="PackedScene" uid="uid://beean8strmt7d" path="res://Scenes/Game/deck.tscn" id="6_fq0cl"]
[ext_resource type="Texture2D" uid="uid://bvke64wyu2lxe" path="res://Assets/Design/Icons/Bet.png" id="6_jyqft"]
[ext_resource type="Script" uid="uid://dkyxxgchwonsr" path="res://Scripts/Game/deck.gd" id="7_hwpts"]
[ext_resource type="Script" uid="uid://cco7p5b7hyrr6" path="res://Scripts/Slots/input_manager.gd" id="8_jyqft"]
[ext_resource type="Script" uid="uid://cqtr1qjvgnrk5" path="res://Scripts/Game/opponent_hand.gd" id="9_3tgeq"]
[ext_resource type="PackedScene" uid="uid://dwuw31kdmyq74" path="res://Scenes/Game/deck_ex.tscn" id="10_c4ay3"]
[ext_resource type="Script" uid="uid://bd86peygtet2t" path="res://Scripts/Game/deck_ex.gd" id="11_aht7i"]
[ext_resource type="Script" uid="uid://cd54y1nravi0q" path="res://Scripts/ModalWindow/rich_text_label.gd" id="12_5jffn"]
[ext_resource type="Script" uid="uid://cmqmbgugx7ahf" path="res://Scripts/ModalWindow/popup_panel.gd" id="13_kpo4j"]
[ext_resource type="Script" uid="uid://b58ej1o6if0io" path="res://Scripts/ModalWindow/item_list.gd" id="14_4n42c"]
[ext_resource type="Texture2D" uid="uid://br8lwpb5xbhi7" path="res://Assets/Design/Icons/close-window.png" id="15_346fj"]
[ext_resource type="Texture2D" uid="uid://kmwisb47xf81" path="res://Assets/Design/Icons/Card[Checkered].png" id="15_c5snn"]
[ext_resource type="AudioStream" uid="uid://jto8v7sa58ju" path="res://Assets/Sound/Mellow-Mind_Looping.mp3" id="16_xvtyr"]
[ext_resource type="PackedScene" uid="uid://c5ksced5r2umk" path="res://Scenes/Design/Settings/settings.tscn" id="22_hwpts"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3tgeq"]
texture = ExtResource("5_hwpts")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c4ay3"]
texture = ExtResource("5_hwpts")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aht7i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5jffn"]
texture = ExtResource("5_hwpts")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kpo4j"]
texture = ExtResource("5_hwpts")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4n42c"]
texture = ExtResource("6_jyqft")

[node name="Main" type="Node2D"]
position = Vector2(9, 2)
script = ExtResource("1_erwvk")

[node name="Chain" type="Sprite2D" parent="."]
position = Vector2(950, 540)
scale = Vector2(1, 1.01481)
texture = ExtResource("2_2w5on")

[node name="Cards" type="Node2D" parent="."]

[node name="CardManager" type="Node2D" parent="Cards"]
script = ExtResource("3_2w5on")

[node name="PlayerTotal" type="Label" parent="Cards/CardManager"]
offset_left = 1403.0
offset_top = 897.0
offset_right = 1641.0
offset_bottom = 987.0
theme_override_colors/font_color = Color(0.670588, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_fq0cl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_3tgeq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentTotal" type="Label" parent="Cards/CardManager"]
offset_left = 214.0
offset_top = 110.0
offset_right = 470.0
offset_bottom = 199.0
theme_override_colors/font_color = Color(0.670588, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_fq0cl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_c4ay3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WhoWins" type="Label" parent="Cards/CardManager"]
offset_left = 54.0
offset_top = 480.0
offset_right = 261.0
offset_bottom = 550.0
theme_override_fonts/font = ExtResource("4_fq0cl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_aht7i")

[node name="PlayerScore" type="Label" parent="Cards/CardManager"]
offset_left = 1567.0
offset_top = 597.0
offset_right = 1770.0
offset_bottom = 702.0
theme_override_fonts/font = ExtResource("4_fq0cl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_5jffn")
text = "Score: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentScore" type="Label" parent="Cards/CardManager"]
offset_left = 1585.0
offset_top = 388.0
offset_right = 1772.0
offset_bottom = 484.0
theme_override_fonts/font = ExtResource("4_fq0cl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_kpo4j")
text = "Score: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bet" type="Label" parent="Cards/CardManager"]
offset_left = 1532.0
offset_top = 479.0
offset_right = 1707.0
offset_bottom = 613.0
theme_override_fonts/font = ExtResource("4_fq0cl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_4n42c")
text = "Bet: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Card1" parent="Cards" instance=ExtResource("3_346fj")]
visible = false
position = Vector2(1805, 384)

[node name="PlayerHand" type="Node2D" parent="Cards"]
position = Vector2(-9, -2)
script = ExtResource("4_0sclb")

[node name="CardSlot" parent="Cards" instance=ExtResource("5_sxkr1")]
position = Vector2(-9, -2)

[node name="Deck" parent="Cards" instance=ExtResource("6_fq0cl")]
position = Vector2(-9, -2)
script = ExtResource("7_hwpts")

[node name="NewRound" type="Button" parent="Cards/Deck"]
offset_left = 41.0
offset_top = 915.0
offset_right = 315.0
offset_bottom = 992.0
theme_override_font_sizes/font_size = 50
text = "NewRound"

[node name="InputManager" type="Node2D" parent="Cards"]
position = Vector2(-9, -2)
script = ExtResource("8_jyqft")

[node name="OpponentHand" type="Node2D" parent="Cards"]
script = ExtResource("9_3tgeq")

[node name="DeckEx" parent="Cards" instance=ExtResource("10_c4ay3")]
script = ExtResource("11_aht7i")

[node name="RichTextLabel" type="RichTextLabel" parent="Cards/DeckEx"]
offset_left = 1674.0
offset_top = 445.0
offset_right = 1719.0
offset_bottom = 485.0
script = ExtResource("12_5jffn")
metadata/_edit_use_anchors_ = true

[node name="ModalWindow" type="PopupPanel" parent="Cards"]
size = Vector2i(608, 1092)
script = ExtResource("13_kpo4j")

[node name="VBoxContainer" type="VBoxContainer" parent="Cards/ModalWindow"]
custom_minimum_size = Vector2(600, 1080)
offset_left = 4.0
offset_top = 4.0
offset_right = 604.0
offset_bottom = 1088.0

[node name="BoxContainer" type="BoxContainer" parent="Cards/ModalWindow/VBoxContainer"]
custom_minimum_size = Vector2(600, 136)
layout_mode = 2

[node name="CloseButton" type="Button" parent="Cards/ModalWindow/VBoxContainer/BoxContainer"]
layout_mode = 2
icon = ExtResource("15_346fj")

[node name="BoxContainer2" type="BoxContainer" parent="Cards/ModalWindow/VBoxContainer"]
custom_minimum_size = Vector2(600, 944)
layout_mode = 2
size_flags_horizontal = 0

[node name="ItemList" type="ItemList" parent="Cards/ModalWindow/VBoxContainer/BoxContainer2"]
layout_mode = 2
item_count = 2
item_0/text = "Destroy"
script = ExtResource("14_4n42c")

[node name="MenuButton" type="MenuButton" parent="Cards"]
offset_left = 1711.0
offset_top = 775.0
offset_right = 1869.0
offset_bottom = 1001.0
icon = ExtResource("15_c5snn")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_xvtyr")
volume_db = 2.334
autoplay = true

[node name="Settings" parent="." instance=ExtResource("22_hwpts")]

[connection signal="pressed" from="Cards/Deck/NewRound" to="Cards/Deck" method="_on_new_round_pressed"]
[connection signal="pressed" from="Cards/ModalWindow/VBoxContainer/BoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="item_clicked" from="Cards/ModalWindow/VBoxContainer/BoxContainer2/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="Cards/MenuButton" to="." method="_on_open_modal_button_pressed"]
